# C-

./: .gitignore  CMakeLists.txt  README.md  fruit
docs/: index.md
examples/: array.c  hello.c  loop.c  pointer.c
include/: fruit.h
scripts/: build.ps1  run.ps1  test.ps1
src/: main.c
src/utils/: fruit.c
test/: CMakeLists.txt  test_fruit.c
